<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Mario</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">
        Hi, my name is Mario.
        \n\n
        I am a programmer, I have classified to ICPC Mexico Finals and I have won coding Cup TecNM.
        \n\n
        I can code in several languages like C, C++, Java, C#, Phyton, Javascript, PHP, Kotlin. And I know
        other technologies like MYSQL, HTML, CSS, REACT, etc.
        \n\n
        My favorite subject is Networks and DataBases subjects.

    </string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>